# sigilapp

./: .gitignore  INSTRUCTIONS.txt  planning_document.txt
backend/: pyproject.toml
backend/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_sigil_burned_at_sigil_burned_lat_sigil_burned_long_and_more.py  0003_sigil_layout_type_sigil_letter_assignment_and_more.py
backend/config/: settings.py  urls.py
mobile/: pubspec.yaml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/lib/models/: saved_sigil.dart
mobile/lib/screens/: account_screen.dart  dashboard_screen.dart  login_screen.dart  sigil_detail_screen.dart  signup_screen.dart
mobile/lib/screens/sigil_wizard/: drawing_step.dart  incantation_step.dart  layout_selection_step.dart  sigil_creation_screen.dart  sigil_layout_painter.dart
mobile/lib/services/: api_service.dart  auth_service.dart  location_service.dart  sigil_storage_service.dart
mobile/lib/utils/: sigil_processor.dart  theme.dart
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/test/: api_contract_test.dart  widget_test.dart
mobile/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
